2004-12-22  Chris Burdess  <dog@gnu.org>

	* src/gnu/ldml/Analyzer.java: Do not specify validSubLocales explicitly.
	* src/gnu/localegen/JavaGenerator.java: Generate
	LocaleInformation.java from root locale.

2004-12-22  Chris Burdess  <dog@gnu.org>

	* src/gnu/ldml/Analyzer.java,src/gnu/ldml/Parser.java: Permit
	multiple locales per parser.
	* src/gnu/localegen/JavaGenerator.java,src/gnu/localegen/Main.java:
	Assign collations and locales to individual JavaGenerators. Fix
	strings generated over multiple lines.

2004-12-18  Guilhem Lavaux  <guilhem@kaffe.org>

	* src/gnu/localegen/JavaGenerator.java:
	(convertToJavaString): Espace '"' using '\"' instead of '\uXXXX'
	because jikes has some problem with it.

2004-12-18  Guilhem Lavaux  <guilhem@kaffe.org>
	
	* src/gnu/localegen/JavaGenerator.java
	(StringContent): Do not convert to escaped strings as it is done
	afterward.

2004-12-18  Guilhem Lavaux  <guilhem@kaffe.org>

	* src/gnu/localegen/JavaGenerator.java
	(generateContents): Keep the comma at the end of the
	array. Convert the data string into an escaped string.
	(ManualListContent.generateContent): Likewise.
	(TimeZoneContent.generateContent): Likewise.
	(generate): Delete the output file if it should be empty.

	* src/gnu/localegen/Main.java
	(main): Accept any number of files on the command line.
	
	* src/gnu/currencygen/Main.java
	(startElement, endElement): Retrieve the info and fractions
	element. Generate a key pair <country>.currency and
	<country>.fractionDigits.
	
2004-12-01  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/JavaGenerator.java
	(generateContent): Always print commas after array entries.

2004-12-01  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/JavaGenerator.java
	(generateContent): Content has to be of type String/String[].

2004-11-14  Guilhem Lavaux  <guilhem@kaffe.org>

	* src/gnu/localegen/JavaGenerator.java
	(OrderedListContent.generateContent): Print null if there is not any